push whit test
add ci/cd
